# mdbook-d2-png

./: CHANGELOG.md  CLAUDE.md  CODE_OPTIMIZATION_PLAN.md  Cargo.toml  PR_DESCRIPTION.md  PR_DESCRIPTION_CONDENSED.md  PR_FEEDBACK_RESPONSE_PLAN.md  README.md  REVIEWER_RESPONSE.md  TODO.md
example/: book.toml
example/src/: intro.md
src/: backend.rs  config.rs  lib.rs  main.rs
tests/: render.rs
tests/common/: mod.rs
