[package]
name = "mdbook-d2-png"
description = "PNG-output mdBook preprocessor for D2 diagrams"
version = "0.3.7-png.2"
authors = ["Emilio Castro <emilio@emiliocastro.com.mx>"]
edition = "2021"
license = "MIT"
keywords = ["mdbook", "d2", "markdown", "commonmark"]
categories = ["command-line-utilities", "text-processing", "visualization"]
repository = "https://github.com/ScrambledBits/mdbook-d2-png"
rust-version = "1.82.0"

[lib]
name = "mdbook_d2_png"
path = "src/lib.rs"

[[bin]]
name = "mdbook-d2-png"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
log = "0.4"
mdbook = "0.4"
pulldown-cmark = "0.13"
pulldown-cmark-to-cmark = "21"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3.20.0"
test-case = "3.1.0"
toml = "0.9.0"
